# Application

./: .SRCINFO  .gitattributes  .gitignore  Application.doap  Application.sln  CMakeLists.txt  CONTRIBUTING.md  Nickvision.Application.slnx  Nickvision.Common.targets  NickvisionApplication.doap  NickvisionApplication.sln  PKGBUILD  README.md  UpdateConfig.json  application.cpp  application.h  build.cake  license.rtf  main.cpp  meson.build  org.nickvision.application.desktop  org.nickvision.application.json  org.nickvision.application.metainfo.xml
Nickvision.Application.GNOME/: Application.cs  Nickvision.Application.GNOME.csproj  Program.cs
Nickvision.Application.Gtk/: Application.cs  Nickvision.Application.Gtk.csproj  Program.cs
Nickvision.Application.Shared/: Nickvision.Application.Shared.csproj
Nickvision.Application.WinUI/: App.xaml  App.xaml.cs  Nickvision.Application.WinUI.csproj  Program.cs  app.manifest
NickvisionApplication/: Application.cpp  Application.h  NickvisionApplication.rc  NickvisionApplication.vcxproj  NickvisionApplication.vcxproj.filters  main.cpp  resources.qrc
NickvisionApplication.Fluent/: App.axaml  App.axaml.cs  NickvisionApplication.Fluent.csproj  Program.cs  nuget-sources.json
NickvisionApplication.GNOME/: NickvisionApplication.GNOME.csproj  Program.cs  blueprint-compiler.bat.in  install_extras.sh  justfile  nuget-sources.json  org.nickvision.application-gnomebuilder.json  org.nickvision.application.desktop  org.nickvision.application.json  org.nickvision.application.metainfo.xml  org.nickvision.application.service.in  sources.json  translate_meta.py
NickvisionApplication.Shared/: NickvisionApplication.Shared.csproj  org.nickvision.application.desktop.in  org.nickvision.application.metainfo.xml.in
NickvisionApplication.WinUI/: App.axaml  App.axaml.cs  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NickvisionApplication.WinUI.csproj  Package.appxmanifest  Program.cs  WindowsSystemDispatcherQueueHelper.cs  app.manifest  nuget.config
cmake/: helpers.cmake
controls/: headerbar.cpp  headerbar.h  infobar.cpp  infobar.h  progressdialog.cpp  progressdialog.h
flatpak/: NuGet.config  build.sh  cpr.patch  libnick.patch  maddy_CMakeLists.txt  nuget-sources.json  org.nickvision.application-fluent.json  org.nickvision.application.gnome.json  org.nickvision.application.json  org.nickvision.application.qt.json  publish-and-install.sh  shared-modules.json
helpers/: curlhelpers.cpp  curlhelpers.h
inno/: setup.iss
libapplication/: CMakeLists.txt
libapplication/include/controllers/: mainwindowcontroller.h  preferencesviewcontroller.h
libapplication/include/models/: configuration.h  startupinformation.h  theme.h
libapplication/src/controllers/: mainwindowcontroller.cpp  preferencesviewcontroller.cpp
libapplication/src/models/: configuration.cpp  startupinformation.cpp
models/: configuration.cpp  configuration.h  theme.h
org.nickvision.application.gnome/: CMakeLists.txt
org.nickvision.application.gnome/blueprints/: main_window.blp  preferences_dialog.blp  shortcuts_dialog.blp
org.nickvision.application.gnome/include/: application.h
org.nickvision.application.gnome/include/helpers/: builder.h  controlbase.h  controlptr.h  dialogbase.h  dialogptr.h  gtkhelpers.h
org.nickvision.application.gnome/include/views/: mainwindow.h  preferencesdialog.h
org.nickvision.application.gnome/resources/: org.nickvision.application.desktop.in  org.nickvision.application.gresource.xml  org.nickvision.application.in  org.nickvision.application.metainfo.xml.in
org.nickvision.application.gnome/src/: application.cpp  main.cpp
org.nickvision.application.gnome/src/helpers/: builder.cpp  dialogbase.cpp  gtkhelpers.cpp
org.nickvision.application.gnome/src/views/: mainwindow.cpp  preferencesdialog.cpp
org.nickvision.application.osx/: CMakeLists.txt
org.nickvision.application.osx/include/: application.h
org.nickvision.application.osx/include/views/: mainwindow.h
org.nickvision.application.osx/resources/: Info.plist.in
org.nickvision.application.osx/src/: application.cpp
org.nickvision.application.osx/src/views/: mainwindow.cpp
org.nickvision.application.qt/: CMakeLists.txt  org.nickvision.application.qt.qrc  resources.rc
org.nickvision.application.qt/include/: application.h
org.nickvision.application.qt/include/controls/: aboutdialog.h  infobar.h  navigationbar.h  statuspage.h
org.nickvision.application.qt/include/helpers/: qthelpers.h
org.nickvision.application.qt/include/views/: mainwindow.h  settingsdialog.h  settingspage.h
org.nickvision.application.qt/resources/: dark-theme.json  light-theme.json  org.nickvision.application.qt.qrc
org.nickvision.application.qt/src/: application.cpp  main.cpp
org.nickvision.application.qt/src/controls/: aboutdialog.cpp  aboutdialog.ui  infobar.cpp  navigationbar.cpp  statuspage.cpp
org.nickvision.application.qt/src/helpers/: qthelpers.cpp
org.nickvision.application.qt/src/views/: mainwindow.cpp  mainwindow.qrc  mainwindow.ui  settingsdialog.cpp  settingsdialog.ui  settingspage.cpp  settingspage.ui
org.nickvision.application.winui/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  SettingsPage.xaml  SettingsPage.xaml.cpp  SettingsPage.xaml.h  includes.h  org.nickvision.application.winui.manifest  pch.h
po/: nl.po
src/: main.cpp  meson.build
src/controllers/: mainwindowcontroller.cpp  mainwindowcontroller.hpp  preferencesdialogcontroller.cpp  preferencesdialogcontroller.hpp
src/helpers/: curlhelpers.cpp  curlhelpers.hpp  stringhelpers.cpp  stringhelpers.hpp
src/models/: appinfo.cpp  appinfo.hpp  configuration.cpp  configuration.hpp
src/ui/: application.cpp  application.hpp
src/ui/controls/: comboboxdialog.cpp  comboboxdialog.hpp  entrydialog.cpp  entrydialog.hpp  messagedialog.cpp  messagedialog.hpp  progressdialog.cpp  progressdialog.hpp
src/ui/views/: mainwindow.cpp  mainwindow.hpp  preferencesdialog.cpp  preferencesdialog.hpp  shortcutsdialog.cpp  shortcutsdialog.hpp
(+328 files in other folders)
