sources = files('main.cpp', 
		'models/appinfo.hpp',
		'models/appinfo.cpp',
		'models/configuration.hpp',
		'models/configuration.cpp',
		'helpers/curlhelpers.hpp',
		'helpers/curlhelpers.cpp',
		'controllers/mainwindowcontroller.hpp',
		'controllers/mainwindowcontroller.cpp',
		'controllers/preferencesdialogcontroller.hpp',
		'controllers/preferencesdialogcontroller.cpp',
		'ui/application.hpp', 
		'ui/application.cpp', 
		'ui/views/mainwindow.hpp', 
		'ui/views/mainwindow.cpp',
		'ui/views/preferencesdialog.hpp',
		'ui/views/preferencesdialog.cpp')