sources = files('main.cpp', 
		'models/appinfo.hpp',
		'models/appinfo.cpp',
		'models/configuration.hpp',
		'models/configuration.cpp',
		'controllers/mainwindowcontroller.hpp',
		'controllers/mainwindowcontroller.cpp',
		'controllers/preferencesdialogcontroller.hpp',
		'controllers/preferencesdialogcontroller.cpp',
		'ui/application.hpp', 
		'ui/application.cpp',
		'ui/controls/progressdialog.hpp',
		'ui/controls/progressdialog.cpp',
		'ui/controls/comboboxdialog.hpp',
		'ui/controls/comboboxdialog.cpp',
		'ui/views/mainwindow.hpp', 
		'ui/views/mainwindow.cpp',
		'ui/views/preferencesdialog.hpp',
		'ui/views/preferencesdialog.cpp',
		'ui/views/shortcutsdialog.hpp',
		'ui/views/shortcutsdialog.cpp')

resources = files('resources/org.nickvision.application.png')